Progress in the project.

--- a/ClinicApp.API/appsettings.json
+++ b/ClinicApp.API/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*"
 } "Jwt": {
-  "Key": "your_super_secret_key_here_12345",
-  "Issuer": "YourAppIssuer",
-  "Audience": "YourAppAudience",
+  "Key": "ThisIsASecretKey1234567890",
+  "Issuer": "CliniApp",
+  "Audience": "ClinicClient",
   "ExpiryMinutes": 60
 }
