--- a/ClinicApp.API/appsettings.Development.json
+++ b/ClinicApp.API/appsettings.Development.json
@@ -2,11 +2,20 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=KAUSHAL_LAPTOP\\SQLEXPRESS01;Database=ClinicAppDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+
+  "Jwt": {
+    "Key": "your_super_secret_key_here",
+    "Issuer": "your_app",
+    "Audience": "your_users",
+    "ExpiryMinutes": 60
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
   "AllowedHosts": "*"
-} 
+}
